[package]
name = "rover1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.8.1"
tokio = { version = "1", features = ["net", "rt", "rt-multi-thread", "macros", "time"] }
futures = { version = "0.3" }

[build]
rustflags = ["--cfg", "tokio_unstable"]
